config-root/namespaces/jx-production/jx-payments-manning/jx-payments-manning-jx-payments-manning-deploy.yaml
# Source: jx-payments-manning/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-payments-manning-jx-payments-manning
  labels:
    draft: draft-app
    chart: "jx-payments-manning-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-payments-manning'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jx-payments-manning-jx-payments-manning
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-payments-manning-jx-payments-manning
    spec:
      serviceAccountName: jx-payments-manning-jx-payments-manning
      containers:
        - name: jx-payments-manning
          image: "gcr.io/brifer-terraform-admin/jx-payments-manning:0.0.3"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
