config-root/namespaces/jx-production/jx-payments-manning/jx-payments-manning-svc.yaml
# Source: jx-payments-manning/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx-payments-manning
  labels:
    chart: "jx-payments-manning-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-payments-manning'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx-payments-manning-jx-payments-manning
